[package]
name = "complement_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.10.0", features = ["transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
anyhow = "1"
regex = "1"
globset = "0.4"
